[package]
name = "zerodha-tl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
futures-util = "0.3"
tracing = "0.1.44"
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"       # Needed for StreamExt
tracing-subscriber = "0.3" # Needed to see the logs